--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 </head>
 
 <body>
+    <!-- Navbar -->
     <nav class="w-full bg-white">
         <div class="navbar flex-col md:flex-row md:justify-between md:items-center py-4 px-6 md:px-12">
             <div class="flex justify-center items-center gap-2">
@@ -34,6 +35,18 @@
         </div>
         </div>
     </nav>
+
+    <main>
+        <!-- Banner -->
+        <div
+            class="banner bg-[linear-gradient(to_right,#013223_0%,#006747_50%,#013223_100%)] w-full flex flex-col items-center text-center">
+            <img class="h-24 w-24 mt-4" src="assets/logo-dark.png" alt="">
+            <h1 class="text-4xl font-bold text-white mb-4">Emergency Service Directory</h1>
+            <h3 class="mb-4 text-sm md:text- text-white font-semibold">Government Emergency Services at Your Fingertip –
+                <br class="block md:hidden">A Project by Government of the People’s Republic of Bangladesh
+            </h3>
+        </div>
+    </main>
 
     <script src="home.js"></script>
 </body>
