--- a/index.html
+++ b/index.html
@@ -8,6 +8,10 @@
     <link rel="shortcut icon" href="assets/logo.png" type="image/x-icon">
     <link rel="stylesheet" href="styles/style.css">
     <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
+    <link href="https://cdn.jsdelivr.net/npm/daisyui@5" rel="stylesheet" type="text/css" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.0/css/all.min.css"
+        integrity="sha512-DxV+EoADOkOygM4IR9yXP8Sb2qwgidEmeqAEmDKIOfPRQZOWbXCzLC6vjbZyy0vPisbH2SyW27+ddLVCN+OMzQ=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 
 <body>
@@ -47,6 +51,226 @@
             </h3>
         </div>
     </main>
+
+    <!-- Card Section (Left) -->
+    <div class="grid grid-cols-3 gap-3 mt-8">
+        <div class="card w-96 bg-white card-md shadow-sm">
+            <div class="card-body">
+                <div class="flex justify-between">
+                    <div class="rounded-2xl bg-[#FFE3E2] p-2">
+                        <img class="h-13 w-13" src="assets/emergency.png" alt="">
+                    </div>
+                    <span><i class="fa-regular fa-heart text-xl mt-5"></i></span>
+                </div>
+                <h1 class="card-title">National Emergency Number</h1>
+                <p class="mt-[-0.625rem]">National Emergency</p>
+                <div>
+                    <h1 class="card-title">999</h1>
+                    <span class="inline-block bg-gray-100 text-sm text-gray-700 px-3 py-1 rounded-full mt-1">All</span>
+                </div>
+                <div class="flex justify-between mt-4">
+                    <button class="btn flex-1 mr-2 !bg-white">
+                        <i class="fa-regular fa-copy"></i> Copy
+                    </button>
+                    <button class="btn flex-1 !bg-green-500">
+                        <i class="fa-solid fa-phone"></i> Call
+                    </button>
+                </div>
+            </div>
+        </div>
+        <div class="card w-96 bg-white card-md shadow-sm">
+            <div class="card-body">
+                <div class="flex justify-between">
+                    <div class="rounded-2xl bg-[#DFEFFF] p-2">
+                        <img class="h-13 w-13" src="assets/police.png" alt="">
+                    </div>
+                    <span><i class="fa-regular fa-heart text-xl mt-5"></i></span>
+                </div>
+                <h1 class="card-title">Police Helpline Number</h1>
+                <p class="mt-[-0.625rem]">Police</p>
+                <div>
+                    <h1 class="card-title">999</h1>
+                    <span class="inline-block bg-gray-100 text-sm text-gray-700 px-3 py-1 rounded-full mt-1">Police</span>
+                </div>
+                <div class="flex justify-between mt-4">
+                    <button class="btn flex-1 mr-2 !bg-white">
+                        <i class="fa-regular fa-copy"></i> Copy
+                    </button>
+                    <button class="btn flex-1 !bg-green-500">
+                        <i class="fa-solid fa-phone"></i> Call
+                    </button>
+                </div>
+            </div>
+        </div>
+        <div class="card w-96 bg-white card-md shadow-sm">
+            <div class="card-body">
+                <div class="flex justify-between">
+                    <div class="rounded-2xl bg-[#FFE3E2] p-2">
+                        <img class="h-13 w-13" src="assets/fire-service.png" alt="">
+                    </div>
+                    <span><i class="fa-regular fa-heart text-xl mt-5"></i></span>
+                </div>
+                <h1 class="card-title">Fire Service Number</h1>
+                <p class="mt-[-0.625rem]">Fire Service</p>
+                <div>
+                    <h1 class="card-title">999</h1>
+                    <span class="inline-block bg-gray-100 text-sm text-gray-700 px-3 py-1 rounded-full mt-1">Fire</span>
+                </div>
+                <div class="flex justify-between mt-4">
+                    <button class="btn flex-1 mr-2 !bg-white">
+                        <i class="fa-regular fa-copy"></i> Copy
+                    </button>
+                    <button class="btn flex-1 !bg-green-500">
+                        <i class="fa-solid fa-phone"></i> Call
+                    </button>
+                </div>
+            </div>
+        </div>
+        <div class="card w-96 bg-white card-md shadow-sm">
+            <div class="card-body">
+                <div class="flex justify-between">
+                    <div class="rounded-2xl bg-[#FFE3E2] p-2">
+                        <img class="h-13 w-13" src="assets/ambulance.png" alt="">
+                    </div>
+                    <span><i class="fa-regular fa-heart text-xl mt-5"></i></span>
+                </div>
+                <h1 class="card-title">Ambulance Service</h1>
+                <p class="mt-[-0.625rem]">Ambulance</p>
+                <div>
+                    <h1 class="card-title">1994-999999</h1>
+                    <span class="inline-block bg-gray-100 text-sm text-gray-700 px-3 py-1 rounded-full mt-1">Health</span>
+                </div>
+                <div class="flex justify-between mt-4">
+                    <button class="btn flex-1 mr-2 !bg-white">
+                        <i class="fa-regular fa-copy"></i> Copy
+                    </button>
+                    <button class="btn flex-1 !bg-green-500">
+                        <i class="fa-solid fa-phone"></i> Call
+                    </button>
+                </div>
+            </div>
+        </div>
+        <div class="card w-96 bg-white card-md shadow-sm">
+            <div class="card-body">
+                <div class="flex justify-between">
+                    <div class="rounded-2xl bg-[#FFE3E2] p-2">
+                        <img class="h-13 w-13" src="assets/mother-and-child.jpg" alt="">
+                    </div>
+                    <span><i class="fa-regular fa-heart text-xl mt-5"></i></span>
+                </div>
+                <h1 class="card-title">Women and Child Helpline</h1>
+                <p class="mt-[-0.625rem]">Women and Child Helpline</p>
+                <div>
+                    <h1 class="card-title">109</h1>
+                    <span class="inline-block bg-gray-100 text-sm text-gray-700 px-3 py-1 rounded-full mt-1">Help</span>
+                </div>
+                <div class="flex justify-between mt-4">
+                    <button class="btn flex-1 mr-2 !bg-white">
+                        <i class="fa-regular fa-copy"></i> Copy
+                    </button>
+                    <button class="btn flex-1 !bg-green-500">
+                        <i class="fa-solid fa-phone"></i> Call
+                    </button>
+                </div>
+            </div>
+        </div>
+        <div class="card w-96 bg-white card-md shadow-sm">
+            <div class="card-body">
+                <div class="flex justify-between">
+                    <div class="rounded-2xl bg-[#DFEFFF] p-2">
+                        <img class="h-13 w-13" src="assets/a-c-h.png" alt="">
+                    </div>
+                    <span><i class="fa-regular fa-heart text-xl mt-5"></i></span>
+                </div>
+                <h1 class="card-title">Anti-Corruption Helpline</h1>
+                <p class="mt-[-0.625rem]">Anti-Corruption</p>
+                <div>
+                    <h1 class="card-title">106</h1>
+                    <span class="inline-block bg-gray-100 text-sm text-gray-700 px-3 py-1 rounded-full mt-1">Govt</span>
+                </div>
+                <div class="flex justify-between mt-4">
+                    <button class="btn flex-1 mr-2 !bg-white">
+                        <i class="fa-regular fa-copy"></i> Copy
+                    </button>
+                    <button class="btn flex-1 !bg-green-500">
+                        <i class="fa-solid fa-phone"></i> Call
+                    </button>
+                </div>
+            </div>
+        </div>
+        <div class="card w-96 bg-white card-md shadow-sm">
+            <div class="card-body">
+                <div class="flex justify-between">
+                    <div class="rounded-2xl bg-[#ffeec2] p-2">
+                        <img class="h-13 w-13" src="assets/electricity.png" alt="">
+                    </div>
+                    <span><i class="fa-regular fa-heart text-xl mt-5"></i></span>
+                </div>
+                <h1 class="card-title">Electricity Helpline</h1>
+                <p class="mt-[-0.625rem]">Electricity Outage</p>
+                <div>
+                    <h1 class="card-title">16216</h1>
+                    <span class="inline-block bg-gray-100 text-sm text-gray-700 px-3 py-1 rounded-full mt-1">Electricity</span>
+                </div>
+                <div class="flex justify-between mt-4">
+                    <button class="btn flex-1 mr-2 !bg-white">
+                        <i class="fa-regular fa-copy"></i> Copy
+                    </button>
+                    <button class="btn flex-1 !bg-green-500">
+                        <i class="fa-solid fa-phone"></i> Call
+                    </button>
+                </div>
+            </div>
+        </div>
+        <div class="card w-96 bg-white card-md shadow-sm">
+            <div class="card-body">
+                <div class="flex justify-between">
+                    <div class="rounded-2xl bg-[#FFE3E2] p-2">
+                        <img class="h-13 w-13" src="assets/brac.png" alt="">
+                    </div>
+                    <span><i class="fa-regular fa-heart text-xl mt-5"></i></span>
+                </div>
+                <h1 class="card-title">Brac Helpline</h1>
+                <p class="mt-[-0.625rem]">Brac</p>
+                <div>
+                    <h1 class="card-title">16445</h1>
+                    <span class="inline-block bg-gray-100 text-sm text-gray-700 px-3 py-1 rounded-full mt-1">NGO</span>
+                </div>
+                <div class="flex justify-between mt-4">
+                    <button class="btn flex-1 mr-2 !bg-white">
+                        <i class="fa-regular fa-copy"></i> Copy
+                    </button>
+                    <button class="btn flex-1 !bg-green-500">
+                        <i class="fa-solid fa-phone"></i> Call
+                    </button>
+                </div>
+            </div>
+        </div>
+        <div class="card w-96 bg-white card-md shadow-sm">
+            <div class="card-body">
+                <div class="flex justify-between">
+                    <div class="rounded-2xl bg-[#ffdf7e] p-2">
+                        <img class="h-13 w-13" src="assets/Bangladesh-Railway.png" alt="">
+                    </div>
+                    <span><i class="fa-regular fa-heart text-xl mt-5"></i></span>
+                </div>
+                <h1 class="card-title">Bangladesh Railway Helpline</h1>
+                <p class="mt-[-0.625rem]">Bangladesh Railway</p>
+                <div>
+                    <h1 class="card-title">163</h1>
+                    <span class="inline-block bg-gray-100 text-sm text-gray-700 px-3 py-1 rounded-full mt-1">Travel</span>
+                </div>
+                <div class="flex justify-between mt-4">
+                    <button class="btn flex-1 mr-2 !bg-white">
+                        <i class="fa-regular fa-copy"></i> Copy
+                    </button>
+                    <button class="btn flex-1 !bg-green-500">
+                        <i class="fa-solid fa-phone"></i> Call
+                    </button>
+                </div>
+            </div>
+        </div>
+    </div>
 
     <script src="home.js"></script>
 </body>
