fixing the card section

--- a/index.html
+++ b/index.html
@@ -53,8 +53,8 @@
     </main>
 
     <!-- Card Section (Left) -->
-    <div class="grid grid-cols-3 gap-3 mt-8">
-        <div class="card w-96 bg-white card-md shadow-sm">
+    <div class="grid grid-cols-3 gap-3 mt-8 p-6">
+        <div class="card w-full max-w-[440px] bg-white card-md shadow-sm">
             <div class="card-body">
                 <div class="flex justify-between">
                     <div class="rounded-2xl bg-[#FFE3E2] p-2">
@@ -78,7 +78,7 @@
                 </div>
             </div>
         </div>
-        <div class="card w-96 bg-white card-md shadow-sm">
+        <div class="card w-full max-w-[440px] bg-white card-md shadow-sm">
             <div class="card-body">
                 <div class="flex justify-between">
                     <div class="rounded-2xl bg-[#DFEFFF] p-2">
@@ -90,7 +90,8 @@
                 <p class="mt-[-0.625rem]">Police</p>
                 <div>
                     <h1 class="card-title">999</h1>
-                    <span class="inline-block bg-gray-100 text-sm text-gray-700 px-3 py-1 rounded-full mt-1">Police</span>
+                    <span
+                        class="inline-block bg-gray-100 text-sm text-gray-700 px-3 py-1 rounded-full mt-1">Police</span>
                 </div>
                 <div class="flex justify-between mt-4">
                     <button class="btn flex-1 mr-2 !bg-white">
@@ -102,7 +103,7 @@
                 </div>
             </div>
         </div>
-        <div class="card w-96 bg-white card-md shadow-sm">
+        <div class="card w-full max-w-[440px] bg-white card-md shadow-sm">
             <div class="card-body">
                 <div class="flex justify-between">
                     <div class="rounded-2xl bg-[#FFE3E2] p-2">
@@ -126,7 +127,7 @@
                 </div>
             </div>
         </div>
-        <div class="card w-96 bg-white card-md shadow-sm">
+        <div class="card w-full max-w-[440px] bg-white card-md shadow-sm">
             <div class="card-body">
                 <div class="flex justify-between">
                     <div class="rounded-2xl bg-[#FFE3E2] p-2">
@@ -138,7 +139,8 @@
                 <p class="mt-[-0.625rem]">Ambulance</p>
                 <div>
                     <h1 class="card-title">1994-999999</h1>
-                    <span class="inline-block bg-gray-100 text-sm text-gray-700 px-3 py-1 rounded-full mt-1">Health</span>
+                    <span
+                        class="inline-block bg-gray-100 text-sm text-gray-700 px-3 py-1 rounded-full mt-1">Health</span>
                 </div>
                 <div class="flex justify-between mt-4">
                     <button class="btn flex-1 mr-2 !bg-white">
@@ -150,7 +152,7 @@
                 </div>
             </div>
         </div>
-        <div class="card w-96 bg-white card-md shadow-sm">
+        <div class="card w-full max-w-[440px] bg-white card-md shadow-sm">
             <div class="card-body">
                 <div class="flex justify-between">
                     <div class="rounded-2xl bg-[#FFE3E2] p-2">
@@ -174,7 +176,7 @@
                 </div>
             </div>
         </div>
-        <div class="card w-96 bg-white card-md shadow-sm">
+        <div class="card w-full max-w-[440px] bg-white card-md shadow-sm">
             <div class="card-body">
                 <div class="flex justify-between">
                     <div class="rounded-2xl bg-[#DFEFFF] p-2">
@@ -198,7 +200,7 @@
                 </div>
             </div>
         </div>
-        <div class="card w-96 bg-white card-md shadow-sm">
+        <div class="card w-full max-w-[440px] bg-white card-md shadow-sm">
             <div class="card-body">
                 <div class="flex justify-between">
                     <div class="rounded-2xl bg-[#ffeec2] p-2">
@@ -210,7 +212,8 @@
                 <p class="mt-[-0.625rem]">Electricity Outage</p>
                 <div>
                     <h1 class="card-title">16216</h1>
-                    <span class="inline-block bg-gray-100 text-sm text-gray-700 px-3 py-1 rounded-full mt-1">Electricity</span>
+                    <span
+                        class="inline-block bg-gray-100 text-sm text-gray-700 px-3 py-1 rounded-full mt-1">Electricity</span>
                 </div>
                 <div class="flex justify-between mt-4">
                     <button class="btn flex-1 mr-2 !bg-white">
@@ -222,7 +225,7 @@
                 </div>
             </div>
         </div>
-        <div class="card w-96 bg-white card-md shadow-sm">
+        <div class="card w-full max-w-[440px] bg-white card-md shadow-sm">
             <div class="card-body">
                 <div class="flex justify-between">
                     <div class="rounded-2xl bg-[#FFE3E2] p-2">
@@ -246,7 +249,7 @@
                 </div>
             </div>
         </div>
-        <div class="card w-96 bg-white card-md shadow-sm">
+        <div class="card w-full max-w-[440px] bg-white card-md shadow-sm">
             <div class="card-body">
                 <div class="flex justify-between">
                     <div class="rounded-2xl bg-[#ffdf7e] p-2">
@@ -258,7 +261,8 @@
                 <p class="mt-[-0.625rem]">Bangladesh Railway</p>
                 <div>
                     <h1 class="card-title">163</h1>
-                    <span class="inline-block bg-gray-100 text-sm text-gray-700 px-3 py-1 rounded-full mt-1">Travel</span>
+                    <span
+                        class="inline-block bg-gray-100 text-sm text-gray-700 px-3 py-1 rounded-full mt-1">Travel</span>
                 </div>
                 <div class="flex justify-between mt-4">
                     <button class="btn flex-1 mr-2 !bg-white">
@@ -271,6 +275,7 @@
             </div>
         </div>
     </div>
+
 
     <script src="home.js"></script>
 </body>
