--- a/index.html
+++ b/index.html
@@ -52,8 +52,7 @@
         </div>
     </main>
 
-    <!-- Card Section (Left) -->
-    <div class="grid grid-cols-3 gap-3 mt-8 p-6">
+    <div class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 lg:grid-cols-4 gap-3 mt-8 p-10">
         <div class="card w-full max-w-[440px] bg-white card-md shadow-sm">
             <div class="card-body">
                 <div class="flex justify-between">
@@ -72,8 +71,8 @@
                     <button class="btn flex-1 mr-2 !bg-white">
                         <i class="fa-regular fa-copy"></i> Copy
                     </button>
-                    <button class="btn flex-1 !bg-green-500">
-                        <i class="fa-solid fa-phone"></i> Call
+                    <button class="btn flex-1 !bg-[#00A63E]">
+                        <i class="fa-solid fa-phone text-white"></i> <span class="text-white">Call</span>
                     </button>
                 </div>
             </div>
@@ -86,7 +85,7 @@
                     </div>
                     <span><i class="fa-regular fa-heart text-xl mt-5"></i></span>
                 </div>
-                <h1 class="card-title">Police Helpline Number</h1>
+                <h1 class="card-title">Police Helping Number</h1>
                 <p class="mt-[-0.625rem]">Police</p>
                 <div>
                     <h1 class="card-title">999</h1>
@@ -97,8 +96,8 @@
                     <button class="btn flex-1 mr-2 !bg-white">
                         <i class="fa-regular fa-copy"></i> Copy
                     </button>
-                    <button class="btn flex-1 !bg-green-500">
-                        <i class="fa-solid fa-phone"></i> Call
+                    <button class="btn flex-1 !bg-[#00A63E]">
+                        <i class="fa-solid fa-phone text-white"></i> <span class="text-white">Call</span>
                     </button>
                 </div>
             </div>
@@ -121,9 +120,20 @@
                     <button class="btn flex-1 mr-2 !bg-white">
                         <i class="fa-regular fa-copy"></i> Copy
                     </button>
-                    <button class="btn flex-1 !bg-green-500">
-                        <i class="fa-solid fa-phone"></i> Call
+                    <button class="btn flex-1 !bg-[#00A63E]">
+                        <i class="fa-solid fa-phone text-white"></i> <span class="text-white">Call</span>
                     </button>
+                </div>
+            </div>
+        </div>
+        <div class="bg-white rounded-2xl shadow-sm p-6 row-span-3 flex flex-col justify-between">
+            <div class="flex justify-between items-center">
+                <div class="flex items-center gap-2">
+                    <i class="fa-regular fa-clock text-xl"></i>
+                    <span class="font-semibold">Call History</span>
+                </div>
+                <div class="flex items-center gap-2 bg-[#00A63E] px-4 py-2 rounded-full cursor-pointer">
+                    <span class="font-bold text-white">0 Clear</span>
                 </div>
             </div>
         </div>
@@ -146,8 +156,8 @@
                     <button class="btn flex-1 mr-2 !bg-white">
                         <i class="fa-regular fa-copy"></i> Copy
                     </button>
-                    <button class="btn flex-1 !bg-green-500">
-                        <i class="fa-solid fa-phone"></i> Call
+                    <button class="btn flex-1 !bg-[#00A63E]">
+                        <i class="fa-solid fa-phone text-white"></i> <span class="text-white">Call</span>
                     </button>
                 </div>
             </div>
@@ -160,8 +170,8 @@
                     </div>
                     <span><i class="fa-regular fa-heart text-xl mt-5"></i></span>
                 </div>
-                <h1 class="card-title">Women and Child Helpline</h1>
-                <p class="mt-[-0.625rem]">Women and Child Helpline</p>
+                <h1 class="card-title">Women & Child Helpline</h1>
+                <p class="mt-[-0.625rem]">Women & Child Helpline</p>
                 <div>
                     <h1 class="card-title">109</h1>
                     <span class="inline-block bg-gray-100 text-sm text-gray-700 px-3 py-1 rounded-full mt-1">Help</span>
@@ -170,8 +180,8 @@
                     <button class="btn flex-1 mr-2 !bg-white">
                         <i class="fa-regular fa-copy"></i> Copy
                     </button>
-                    <button class="btn flex-1 !bg-green-500">
-                        <i class="fa-solid fa-phone"></i> Call
+                    <button class="btn flex-1 !bg-[#00A63E]">
+                        <i class="fa-solid fa-phone text-white"></i> <span class="text-white">Call</span>
                     </button>
                 </div>
             </div>
@@ -188,14 +198,15 @@
                 <p class="mt-[-0.625rem]">Anti-Corruption</p>
                 <div>
                     <h1 class="card-title">106</h1>
-                    <span class="inline-block bg-gray-100 text-sm text-gray-700 px-3 py-1 rounded-full mt-1">Govt</span>
+                    <span
+                        class="inline-block bg-gray-100 text-sm text-gray-700 px-3 py-1 rounded-full mt-1">Govt.</span>
                 </div>
                 <div class="flex justify-between mt-4">
                     <button class="btn flex-1 mr-2 !bg-white">
                         <i class="fa-regular fa-copy"></i> Copy
                     </button>
-                    <button class="btn flex-1 !bg-green-500">
-                        <i class="fa-solid fa-phone"></i> Call
+                    <button class="btn flex-1 !bg-[#00A63E]">
+                        <i class="fa-solid fa-phone text-white"></i> <span class="text-white">Call</span>
                     </button>
                 </div>
             </div>
@@ -203,7 +214,7 @@
         <div class="card w-full max-w-[440px] bg-white card-md shadow-sm">
             <div class="card-body">
                 <div class="flex justify-between">
-                    <div class="rounded-2xl bg-[#ffeec2] p-2">
+                    <div class="rounded-2xl bg-[#fffbae] p-2">
                         <img class="h-13 w-13" src="assets/electricity.png" alt="">
                     </div>
                     <span><i class="fa-regular fa-heart text-xl mt-5"></i></span>
@@ -219,8 +230,8 @@
                     <button class="btn flex-1 mr-2 !bg-white">
                         <i class="fa-regular fa-copy"></i> Copy
                     </button>
-                    <button class="btn flex-1 !bg-green-500">
-                        <i class="fa-solid fa-phone"></i> Call
+                    <button class="btn flex-1 !bg-[#00A63E]">
+                        <i class="fa-solid fa-phone text-white"></i> <span class="text-white">Call</span>
                     </button>
                 </div>
             </div>
@@ -243,8 +254,8 @@
                     <button class="btn flex-1 mr-2 !bg-white">
                         <i class="fa-regular fa-copy"></i> Copy
                     </button>
-                    <button class="btn flex-1 !bg-green-500">
-                        <i class="fa-solid fa-phone"></i> Call
+                    <button class="btn flex-1 !bg-[#00A63E]">
+                        <i class="fa-solid fa-phone text-white"></i> <span class="text-white">Call</span>
                     </button>
                 </div>
             </div>
@@ -252,7 +263,7 @@
         <div class="card w-full max-w-[440px] bg-white card-md shadow-sm">
             <div class="card-body">
                 <div class="flex justify-between">
-                    <div class="rounded-2xl bg-[#ffdf7e] p-2">
+                    <div class="rounded-2xl bg-[#ffe4a4] p-2">
                         <img class="h-13 w-13" src="assets/Bangladesh-Railway.png" alt="">
                     </div>
                     <span><i class="fa-regular fa-heart text-xl mt-5"></i></span>
@@ -268,15 +279,13 @@
                     <button class="btn flex-1 mr-2 !bg-white">
                         <i class="fa-regular fa-copy"></i> Copy
                     </button>
-                    <button class="btn flex-1 !bg-green-500">
-                        <i class="fa-solid fa-phone"></i> Call
+                    <button class="btn flex-1 !bg-[#00A63E]">
+                        <i class="fa-solid fa-phone text-white"></i> <span class="text-white">Call</span>
                     </button>
                 </div>
             </div>
         </div>
     </div>
-
-
     <script src="home.js"></script>
 </body>
 
