made the card-heart working count++

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 
             <div class="navbar-right gap-3 mt-4 md:mt-0">
                 <div class="flex items-center gap-2 bg-[#41FF6B1A] px-4 py-2 rounded-full">
-                    <span class="font-bold">0</span>
+                    <span id="navbar-heart" class="font-bold">0</span>
                     <img class="h-6 w-6" src="assets/heart.png" alt="">
                 </div>
                 <div class="flex items-center gap-2 bg-[#41FF6B1A] px-4 py-2 rounded-full">
@@ -59,7 +59,7 @@
                     <div class="rounded-2xl bg-[#FFE3E2] p-2">
                         <img class="h-13 w-13" src="assets/emergency.png" alt="">
                     </div>
-                    <span><i class="fa-regular fa-heart text-xl mt-5"></i></span>
+                    <span><i id="card-heart1" class="fa-regular fa-heart text-xl mt-5"></i></span>
                 </div>
                 <h1 class="card-title">National Emergency Number</h1>
                 <p class="mt-[-0.625rem]">National Emergency</p>
@@ -83,7 +83,7 @@
                     <div class="rounded-2xl bg-[#DFEFFF] p-2">
                         <img class="h-13 w-13" src="assets/police.png" alt="">
                     </div>
-                    <span><i class="fa-regular fa-heart text-xl mt-5"></i></span>
+                    <span><i id="card-heart2" class="fa-regular fa-heart text-xl mt-5"></i></span>
                 </div>
                 <h1 class="card-title">Police Helping Number</h1>
                 <p class="mt-[-0.625rem]">Police</p>
@@ -108,7 +108,7 @@
                     <div class="rounded-2xl bg-[#FFE3E2] p-2">
                         <img class="h-13 w-13" src="assets/fire-service.png" alt="">
                     </div>
-                    <span><i class="fa-regular fa-heart text-xl mt-5"></i></span>
+                    <span><i id="card-heart3" class="fa-regular fa-heart text-xl mt-5"></i></span>
                 </div>
                 <h1 class="card-title">Fire Service Number</h1>
                 <p class="mt-[-0.625rem]">Fire Service</p>
@@ -144,7 +144,7 @@
                     <div class="rounded-2xl bg-[#FFE3E2] p-2">
                         <img class="h-13 w-13" src="assets/ambulance.png" alt="">
                     </div>
-                    <span><i class="fa-regular fa-heart text-xl mt-5"></i></span>
+                    <span><i id="card-heart4" class="fa-regular fa-heart text-xl mt-5"></i></span>
                 </div>
                 <h1 class="card-title">Ambulance Service</h1>
                 <p class="mt-[-0.625rem]">Ambulance</p>
@@ -169,7 +169,7 @@
                     <div class="rounded-2xl bg-[#FFE3E2] p-2">
                         <img class="h-13 w-13" src="assets/mother-and-child.jpg" alt="">
                     </div>
-                    <span><i class="fa-regular fa-heart text-xl mt-5"></i></span>
+                    <span><i id="card-heart5" class="fa-regular fa-heart text-xl mt-5"></i></span>
                 </div>
                 <h1 class="card-title">Women & Child Helpline</h1>
                 <p class="mt-[-0.625rem]">Women & Child Helpline</p>
@@ -193,7 +193,7 @@
                     <div class="rounded-2xl bg-[#DFEFFF] p-2">
                         <img class="h-13 w-13" src="assets/a-c-h.png" alt="">
                     </div>
-                    <span><i class="fa-regular fa-heart text-xl mt-5"></i></span>
+                    <span><i id="card-heart6" class="fa-regular fa-heart text-xl mt-5"></i></span>
                 </div>
                 <h1 class="card-title">Anti-Corruption Helpline</h1>
                 <p class="mt-[-0.625rem]">Anti-Corruption</p>
@@ -218,7 +218,7 @@
                     <div class="rounded-2xl bg-[#fffbae] p-2">
                         <img class="h-13 w-13" src="assets/electricity.png" alt="">
                     </div>
-                    <span><i class="fa-regular fa-heart text-xl mt-5"></i></span>
+                    <span><i id="card-heart7" class="fa-regular fa-heart text-xl mt-5"></i></span>
                 </div>
                 <h1 class="card-title">Electricity Helpline</h1>
                 <p class="mt-[-0.625rem]">Electricity Outage</p>
@@ -243,7 +243,7 @@
                     <div class="rounded-2xl bg-[#FFE3E2] p-2">
                         <img class="h-13 w-13" src="assets/brac.png" alt="">
                     </div>
-                    <span><i class="fa-regular fa-heart text-xl mt-5"></i></span>
+                    <span><i id="card-heart8" class="fa-regular fa-heart text-xl mt-5"></i></span>
                 </div>
                 <h1 class="card-title">Brac Helpline</h1>
                 <p class="mt-[-0.625rem]">Brac</p>
@@ -267,7 +267,7 @@
                     <div class="rounded-2xl bg-[#ffe4a4] p-2">
                         <img class="h-13 w-13" src="assets/Bangladesh-Railway.png" alt="">
                     </div>
-                    <span><i class="fa-regular fa-heart text-xl mt-5"></i></span>
+                    <span><i id="card-heart9" class="fa-regular fa-heart text-xl mt-5"></i></span>
                 </div>
                 <h1 class="card-title">Bangladesh Railway Helpline</h1>
                 <p class="mt-[-0.625rem]">Bangladesh Railway</p>
