made the coin with DOM

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                     <img class="h-6 w-6" src="assets/heart.png" alt="">
                 </div>
                 <div class="flex items-center gap-2 bg-[#41FF6B1A] px-4 py-2 rounded-full">
-                    <span class="font-bold">0</span>
+                    <span id="navbar-coin" class="font-bold">100</span>
                     <img class="h-6 w-6" src="assets/coin.png" alt="">
                 </div>
                 <div class="flex items-center gap-2 bg-[#00A63E] px-4 py-2 rounded-full">
@@ -71,7 +71,7 @@
                     <button class="btn flex-1 mr-2 !bg-white">
                         <i class="fa-regular fa-copy"></i> Copy
                     </button>
-                    <button class="btn flex-1 !bg-[#00A63E]">
+                    <button id="card-call1" class="btn flex-1 !bg-[#00A63E]">
                         <i class="fa-solid fa-phone text-white"></i> <span class="text-white">Call</span>
                     </button>
                 </div>
@@ -96,7 +96,7 @@
                     <button class="btn flex-1 mr-2 !bg-white">
                         <i class="fa-regular fa-copy"></i> Copy
                     </button>
-                    <button class="btn flex-1 !bg-[#00A63E]">
+                    <button id="card-call2" class="btn flex-1 !bg-[#00A63E]">
                         <i class="fa-solid fa-phone text-white"></i> <span class="text-white">Call</span>
                     </button>
                 </div>
@@ -120,7 +120,7 @@
                     <button class="btn flex-1 mr-2 !bg-white">
                         <i class="fa-regular fa-copy"></i> Copy
                     </button>
-                    <button class="btn flex-1 !bg-[#00A63E]">
+                    <button id="card-call3" class="btn flex-1 !bg-[#00A63E]">
                         <i class="fa-solid fa-phone text-white"></i> <span class="text-white">Call</span>
                     </button>
                 </div>
@@ -157,7 +157,7 @@
                     <button class="btn flex-1 mr-2 !bg-white">
                         <i class="fa-regular fa-copy"></i> Copy
                     </button>
-                    <button class="btn flex-1 !bg-[#00A63E]">
+                    <button id="card-call4" class="btn flex-1 !bg-[#00A63E]">
                         <i class="fa-solid fa-phone text-white"></i> <span class="text-white">Call</span>
                     </button>
                 </div>
@@ -181,7 +181,7 @@
                     <button class="btn flex-1 mr-2 !bg-white">
                         <i class="fa-regular fa-copy"></i> Copy
                     </button>
-                    <button class="btn flex-1 !bg-[#00A63E]">
+                    <button id="card-call5" class="btn flex-1 !bg-[#00A63E]">
                         <i class="fa-solid fa-phone text-white"></i> <span class="text-white">Call</span>
                     </button>
                 </div>
@@ -206,7 +206,7 @@
                     <button class="btn flex-1 mr-2 !bg-white">
                         <i class="fa-regular fa-copy"></i> Copy
                     </button>
-                    <button class="btn flex-1 !bg-[#00A63E]">
+                    <button id="card-call6" class="btn flex-1 !bg-[#00A63E]">
                         <i class="fa-solid fa-phone text-white"></i> <span class="text-white">Call</span>
                     </button>
                 </div>
@@ -231,7 +231,7 @@
                     <button class="btn flex-1 mr-2 !bg-white">
                         <i class="fa-regular fa-copy"></i> Copy
                     </button>
-                    <button class="btn flex-1 !bg-[#00A63E]">
+                    <button id="card-call7" class="btn flex-1 !bg-[#00A63E]">
                         <i class="fa-solid fa-phone text-white"></i> <span class="text-white">Call</span>
                     </button>
                 </div>
@@ -255,7 +255,7 @@
                     <button class="btn flex-1 mr-2 !bg-white">
                         <i class="fa-regular fa-copy"></i> Copy
                     </button>
-                    <button class="btn flex-1 !bg-[#00A63E]">
+                    <button id="card-call8" class="btn flex-1 !bg-[#00A63E]">
                         <i class="fa-solid fa-phone text-white"></i> <span class="text-white">Call</span>
                     </button>
                 </div>
@@ -280,7 +280,7 @@
                     <button class="btn flex-1 mr-2 !bg-white">
                         <i class="fa-regular fa-copy"></i> Copy
                     </button>
-                    <button class="btn flex-1 !bg-[#00A63E]">
+                    <button  id="card-call9" class="btn flex-1 !bg-[#00A63E]">
                         <i class="fa-solid fa-phone text-white"></i> <span class="text-white">Call</span>
                     </button>
                 </div>
