hotline numbers are copying

--- a/index.html
+++ b/index.html
@@ -64,11 +64,11 @@
                 <h1 class="card-title">National Emergency Number</h1>
                 <p class="mt-[-0.625rem]">National Emergency</p>
                 <div>
-                    <h1 class="card-title">999</h1>
+                    <h1 id="hotline1" class="card-title">999</h1>
                     <span class="inline-block bg-gray-100 text-sm text-gray-700 px-3 py-1 rounded-full mt-1">All</span>
                 </div>
                 <div class="flex justify-between mt-4">
-                    <button class="btn flex-1 mr-2 !bg-white">
+                    <button id="copy-btn1" class="btn flex-1 mr-2 !bg-white">
                         <i class="fa-regular fa-copy"></i> Copy
                     </button>
                     <button id="card-call1" class="btn flex-1 !bg-[#00A63E]">
@@ -88,12 +88,12 @@
                 <h1 class="card-title">Police Helping Number</h1>
                 <p class="mt-[-0.625rem]">Police</p>
                 <div>
-                    <h1 class="card-title">999</h1>
+                    <h1 id="hotline2" class="card-title">999</h1>
                     <span
                         class="inline-block bg-gray-100 text-sm text-gray-700 px-3 py-1 rounded-full mt-1">Police</span>
                 </div>
                 <div class="flex justify-between mt-4">
-                    <button class="btn flex-1 mr-2 !bg-white">
+                    <button id="copy-btn2" class="btn flex-1 mr-2 !bg-white">
                         <i class="fa-regular fa-copy"></i> Copy
                     </button>
                     <button id="card-call2" class="btn flex-1 !bg-[#00A63E]">
@@ -113,11 +113,11 @@
                 <h1 class="card-title">Fire Service Number</h1>
                 <p class="mt-[-0.625rem]">Fire Service</p>
                 <div>
-                    <h1 class="card-title">999</h1>
+                    <h1 id="hotline3" class="card-title">999</h1>
                     <span class="inline-block bg-gray-100 text-sm text-gray-700 px-3 py-1 rounded-full mt-1">Fire</span>
                 </div>
                 <div class="flex justify-between mt-4">
-                    <button class="btn flex-1 mr-2 !bg-white">
+                    <button id="copy-btn3" class="btn flex-1 mr-2 !bg-white">
                         <i class="fa-regular fa-copy"></i> Copy
                     </button>
                     <button id="card-call3" class="btn flex-1 !bg-[#00A63E]">
@@ -149,12 +149,12 @@
                 <h1 class="card-title">Ambulance Service</h1>
                 <p class="mt-[-0.625rem]">Ambulance</p>
                 <div>
-                    <h1 class="card-title">1994-999999</h1>
+                    <h1 id="hotline4" class="card-title">1994-999999</h1>
                     <span
                         class="inline-block bg-gray-100 text-sm text-gray-700 px-3 py-1 rounded-full mt-1">Health</span>
                 </div>
                 <div class="flex justify-between mt-4">
-                    <button class="btn flex-1 mr-2 !bg-white">
+                    <button id="copy-btn4" class="btn flex-1 mr-2 !bg-white">
                         <i class="fa-regular fa-copy"></i> Copy
                     </button>
                     <button id="card-call4" class="btn flex-1 !bg-[#00A63E]">
@@ -174,11 +174,11 @@
                 <h1 class="card-title">Women & Child Helpline</h1>
                 <p class="mt-[-0.625rem]">Women & Child Helpline</p>
                 <div>
-                    <h1 class="card-title">109</h1>
+                    <h1 id="hotline5" class="card-title">109</h1>
                     <span class="inline-block bg-gray-100 text-sm text-gray-700 px-3 py-1 rounded-full mt-1">Help</span>
                 </div>
                 <div class="flex justify-between mt-4">
-                    <button class="btn flex-1 mr-2 !bg-white">
+                    <button id="copy-btn5" class="btn flex-1 mr-2 !bg-white">
                         <i class="fa-regular fa-copy"></i> Copy
                     </button>
                     <button id="card-call5" class="btn flex-1 !bg-[#00A63E]">
@@ -198,12 +198,12 @@
                 <h1 class="card-title">Anti-Corruption Helpline</h1>
                 <p class="mt-[-0.625rem]">Anti-Corruption</p>
                 <div>
-                    <h1 class="card-title">106</h1>
+                    <h1 id="hotline6" class="card-title">106</h1>
                     <span
                         class="inline-block bg-gray-100 text-sm text-gray-700 px-3 py-1 rounded-full mt-1">Govt.</span>
                 </div>
                 <div class="flex justify-between mt-4">
-                    <button class="btn flex-1 mr-2 !bg-white">
+                    <button id="copy-btn6" class="btn flex-1 mr-2 !bg-white">
                         <i class="fa-regular fa-copy"></i> Copy
                     </button>
                     <button id="card-call6" class="btn flex-1 !bg-[#00A63E]">
@@ -223,12 +223,12 @@
                 <h1 class="card-title">Electricity Helpline</h1>
                 <p class="mt-[-0.625rem]">Electricity Outage</p>
                 <div>
-                    <h1 class="card-title">16216</h1>
+                    <h1 id="hotline7" class="card-title">16216</h1>
                     <span
                         class="inline-block bg-gray-100 text-sm text-gray-700 px-3 py-1 rounded-full mt-1">Electricity</span>
                 </div>
                 <div class="flex justify-between mt-4">
-                    <button class="btn flex-1 mr-2 !bg-white">
+                    <button id="copy-btn7" class="btn flex-1 mr-2 !bg-white">
                         <i class="fa-regular fa-copy"></i> Copy
                     </button>
                     <button id="card-call7" class="btn flex-1 !bg-[#00A63E]">
@@ -248,11 +248,11 @@
                 <h1 class="card-title">Brac Helpline</h1>
                 <p class="mt-[-0.625rem]">Brac</p>
                 <div>
-                    <h1 class="card-title">16445</h1>
+                    <h1 id="hotline8" class="card-title">16445</h1>
                     <span class="inline-block bg-gray-100 text-sm text-gray-700 px-3 py-1 rounded-full mt-1">NGO</span>
                 </div>
                 <div class="flex justify-between mt-4">
-                    <button class="btn flex-1 mr-2 !bg-white">
+                    <button id="copy-btn8" class="btn flex-1 mr-2 !bg-white">
                         <i class="fa-regular fa-copy"></i> Copy
                     </button>
                     <button id="card-call8" class="btn flex-1 !bg-[#00A63E]">
@@ -272,12 +272,12 @@
                 <h1 class="card-title">Bangladesh Railway Helpline</h1>
                 <p class="mt-[-0.625rem]">Bangladesh Railway</p>
                 <div>
-                    <h1 class="card-title">163</h1>
+                    <h1 id="hotline9" class="card-title">163</h1>
                     <span
                         class="inline-block bg-gray-100 text-sm text-gray-700 px-3 py-1 rounded-full mt-1">Travel</span>
                 </div>
                 <div class="flex justify-between mt-4">
-                    <button class="btn flex-1 mr-2 !bg-white">
+                    <button id="copy-btn9" class="btn flex-1 mr-2 !bg-white">
                         <i class="fa-regular fa-copy"></i> Copy
                     </button>
                     <button  id="card-call9" class="btn flex-1 !bg-[#00A63E]">
@@ -286,6 +286,7 @@
                 </div>
             </div>
         </div>
+        <!-- Responsive Call History -->
         <div class="md:flex lg:hidden xl:hidden 2xl:hidden rounded-2xl shadow-sm p-6 flex-col justify-between bg-white">
             <div class="flex justify-between items-center">
                 <div class="flex items-center gap-2">
