--- a/index.html
+++ b/index.html
@@ -61,17 +61,17 @@
                     </div>
                     <span><i id="card-heart1" class="fa-regular fa-heart text-xl mt-5"></i></span>
                 </div>
-                <h1 class="card-title">National Emergency Number</h1>
+                <h1 class="card-title service-name">National Emergency Number</h1>
                 <p class="mt-[-0.625rem]">National Emergency</p>
                 <div>
-                    <h1 id="hotline1" class="card-title">999</h1>
+                    <h1 id="hotline1" class="card-title service-number">999</h1>
                     <span class="inline-block bg-gray-100 text-sm text-gray-700 px-3 py-1 rounded-full mt-1">All</span>
                 </div>
                 <div class="flex justify-between mt-4">
                     <button id="copy-btn1" class="btn flex-1 mr-2 !bg-white">
                         <i class="fa-regular fa-copy"></i> Copy
                     </button>
-                    <button id="card-call1" class="btn flex-1 !bg-[#00A63E]">
+                    <button id="card-call1" class="btn flex-1 !bg-[#00A63E] history-btn">
                         <i class="fa-solid fa-phone text-white"></i> <span class="text-white">Call</span>
                     </button>
                 </div>
@@ -85,10 +85,10 @@
                     </div>
                     <span><i id="card-heart2" class="fa-regular fa-heart text-xl mt-5"></i></span>
                 </div>
-                <h1 class="card-title">Police Helping Number</h1>
+                <h1 class="card-title service-name">Police Helping Number</h1>
                 <p class="mt-[-0.625rem]">Police</p>
                 <div>
-                    <h1 id="hotline2" class="card-title">999</h1>
+                    <h1 id="hotline2" class="card-title service-number">999</h1>
                     <span
                         class="inline-block bg-gray-100 text-sm text-gray-700 px-3 py-1 rounded-full mt-1">Police</span>
                 </div>
@@ -96,7 +96,7 @@
                     <button id="copy-btn2" class="btn flex-1 mr-2 !bg-white">
                         <i class="fa-regular fa-copy"></i> Copy
                     </button>
-                    <button id="card-call2" class="btn flex-1 !bg-[#00A63E]">
+                    <button id="card-call2" class="btn flex-1 !bg-[#00A63E] history-btn">
                         <i class="fa-solid fa-phone text-white"></i> <span class="text-white">Call</span>
                     </button>
                 </div>
@@ -110,33 +110,34 @@
                     </div>
                     <span><i id="card-heart3" class="fa-regular fa-heart text-xl mt-5"></i></span>
                 </div>
-                <h1 class="card-title">Fire Service Number</h1>
+                <h1 class="card-title service-name">Fire Service Number</h1>
                 <p class="mt-[-0.625rem]">Fire Service</p>
                 <div>
-                    <h1 id="hotline3" class="card-title">999</h1>
+                    <h1 id="hotline3" class="card-title service-number">999</h1>
                     <span class="inline-block bg-gray-100 text-sm text-gray-700 px-3 py-1 rounded-full mt-1">Fire</span>
                 </div>
                 <div class="flex justify-between mt-4">
                     <button id="copy-btn3" class="btn flex-1 mr-2 !bg-white">
                         <i class="fa-regular fa-copy"></i> Copy
                     </button>
-                    <button id="card-call3" class="btn flex-1 !bg-[#00A63E]">
+                    <button id="card-call3" class="btn flex-1 !bg-[#00A63E] history-btn">
                         <i class="fa-solid fa-phone text-white"></i> <span class="text-white">Call</span>
                     </button>
                 </div>
             </div>
         </div>
         <!-- Right side card -->
-        <div class="bg-white rounded-2xl shadow-sm p-6 row-span-3 flex flex-col justify-between">
+        <div class="bg-white rounded-2xl shadow-sm p-6 row-span-3 flex flex-col justify-start">
             <div class="flex justify-between items-center">
                 <div class="flex items-center gap-2">
                     <i class="fa-regular fa-clock text-xl"></i>
                     <span class="font-semibold">Call History</span>
                 </div>
-                <div class="flex items-center gap-2 bg-[#00A63E] px-4 py-2 rounded-full cursor-pointer">
-                    <span class="font-bold text-white">0 Clear</span>
+                <div id="clear-history" class="flex items-center gap-2 bg-[#00A63E] px-4 py-2 rounded-full cursor-pointer">
+                    <span class="font-bold text-white"> Clear</span>
                 </div>
             </div>
+            <div id="call-history-list" class="mt-4 space-y-2"></div>
         </div>
         <div class="card w-full max-w-[440px] bg-white card-md shadow-sm">
             <div class="card-body">
@@ -146,10 +147,10 @@
                     </div>
                     <span><i id="card-heart4" class="fa-regular fa-heart text-xl mt-5"></i></span>
                 </div>
-                <h1 class="card-title">Ambulance Service</h1>
+                <h1 class="card-title service-name">Ambulance Service</h1>
                 <p class="mt-[-0.625rem]">Ambulance</p>
                 <div>
-                    <h1 id="hotline4" class="card-title">1994-999999</h1>
+                    <h1 id="hotline4" class="card-title service-number">1994-999999</h1>
                     <span
                         class="inline-block bg-gray-100 text-sm text-gray-700 px-3 py-1 rounded-full mt-1">Health</span>
                 </div>
@@ -157,7 +158,7 @@
                     <button id="copy-btn4" class="btn flex-1 mr-2 !bg-white">
                         <i class="fa-regular fa-copy"></i> Copy
                     </button>
-                    <button id="card-call4" class="btn flex-1 !bg-[#00A63E]">
+                    <button id="card-call4" class="btn flex-1 !bg-[#00A63E] history-btn">
                         <i class="fa-solid fa-phone text-white"></i> <span class="text-white">Call</span>
                     </button>
                 </div>
@@ -171,17 +172,17 @@
                     </div>
                     <span><i id="card-heart5" class="fa-regular fa-heart text-xl mt-5"></i></span>
                 </div>
-                <h1 class="card-title">Women & Child Helpline</h1>
+                <h1 class="card-title service-name">Women & Child Helpline</h1>
                 <p class="mt-[-0.625rem]">Women & Child Helpline</p>
                 <div>
-                    <h1 id="hotline5" class="card-title">109</h1>
+                    <h1 id="hotline5" class="card-title service-number">109</h1>
                     <span class="inline-block bg-gray-100 text-sm text-gray-700 px-3 py-1 rounded-full mt-1">Help</span>
                 </div>
                 <div class="flex justify-between mt-4">
                     <button id="copy-btn5" class="btn flex-1 mr-2 !bg-white">
                         <i class="fa-regular fa-copy"></i> Copy
                     </button>
-                    <button id="card-call5" class="btn flex-1 !bg-[#00A63E]">
+                    <button id="card-call5" class="btn flex-1 !bg-[#00A63E] history-btn">
                         <i class="fa-solid fa-phone text-white"></i> <span class="text-white">Call</span>
                     </button>
                 </div>
@@ -195,10 +196,10 @@
                     </div>
                     <span><i id="card-heart6" class="fa-regular fa-heart text-xl mt-5"></i></span>
                 </div>
-                <h1 class="card-title">Anti-Corruption Helpline</h1>
+                <h1 class="card-title service-name">Anti-Corruption Helpline</h1>
                 <p class="mt-[-0.625rem]">Anti-Corruption</p>
                 <div>
-                    <h1 id="hotline6" class="card-title">106</h1>
+                    <h1 id="hotline6" class="card-title service-number">106</h1>
                     <span
                         class="inline-block bg-gray-100 text-sm text-gray-700 px-3 py-1 rounded-full mt-1">Govt.</span>
                 </div>
@@ -206,7 +207,7 @@
                     <button id="copy-btn6" class="btn flex-1 mr-2 !bg-white">
                         <i class="fa-regular fa-copy"></i> Copy
                     </button>
-                    <button id="card-call6" class="btn flex-1 !bg-[#00A63E]">
+                    <button id="card-call6" class="btn flex-1 !bg-[#00A63E] history-btn">
                         <i class="fa-solid fa-phone text-white"></i> <span class="text-white">Call</span>
                     </button>
                 </div>
@@ -220,10 +221,10 @@
                     </div>
                     <span><i id="card-heart7" class="fa-regular fa-heart text-xl mt-5"></i></span>
                 </div>
-                <h1 class="card-title">Electricity Helpline</h1>
+                <h1 class="card-title service-name">Electricity Helpline</h1>
                 <p class="mt-[-0.625rem]">Electricity Outage</p>
                 <div>
-                    <h1 id="hotline7" class="card-title">16216</h1>
+                    <h1 id="hotline7" class="card-title service-number">16216</h1>
                     <span
                         class="inline-block bg-gray-100 text-sm text-gray-700 px-3 py-1 rounded-full mt-1">Electricity</span>
                 </div>
@@ -231,7 +232,7 @@
                     <button id="copy-btn7" class="btn flex-1 mr-2 !bg-white">
                         <i class="fa-regular fa-copy"></i> Copy
                     </button>
-                    <button id="card-call7" class="btn flex-1 !bg-[#00A63E]">
+                    <button id="card-call7" class="btn flex-1 !bg-[#00A63E] history-btn">
                         <i class="fa-solid fa-phone text-white"></i> <span class="text-white">Call</span>
                     </button>
                 </div>
@@ -245,17 +246,17 @@
                     </div>
                     <span><i id="card-heart8" class="fa-regular fa-heart text-xl mt-5"></i></span>
                 </div>
-                <h1 class="card-title">Brac Helpline</h1>
+                <h1 class="card-title service-name">Brac Helpline</h1>
                 <p class="mt-[-0.625rem]">Brac</p>
                 <div>
-                    <h1 id="hotline8" class="card-title">16445</h1>
+                    <h1 id="hotline8" class="card-title service-number">16445</h1>
                     <span class="inline-block bg-gray-100 text-sm text-gray-700 px-3 py-1 rounded-full mt-1">NGO</span>
                 </div>
                 <div class="flex justify-between mt-4">
                     <button id="copy-btn8" class="btn flex-1 mr-2 !bg-white">
                         <i class="fa-regular fa-copy"></i> Copy
                     </button>
-                    <button id="card-call8" class="btn flex-1 !bg-[#00A63E]">
+                    <button id="card-call8" class="btn flex-1 !bg-[#00A63E] history-btn">
                         <i class="fa-solid fa-phone text-white"></i> <span class="text-white">Call</span>
                     </button>
                 </div>
@@ -269,10 +270,10 @@
                     </div>
                     <span><i id="card-heart9" class="fa-regular fa-heart text-xl mt-5"></i></span>
                 </div>
-                <h1 class="card-title">Bangladesh Railway Helpline</h1>
+                <h1 class="card-title service-name">Bangladesh Railway Helpline</h1>
                 <p class="mt-[-0.625rem]">Bangladesh Railway</p>
                 <div>
-                    <h1 id="hotline9" class="card-title">163</h1>
+                    <h1 id="hotline9" class="card-title service-number">163</h1>
                     <span
                         class="inline-block bg-gray-100 text-sm text-gray-700 px-3 py-1 rounded-full mt-1">Travel</span>
                 </div>
@@ -280,7 +281,7 @@
                     <button id="copy-btn9" class="btn flex-1 mr-2 !bg-white">
                         <i class="fa-regular fa-copy"></i> Copy
                     </button>
-                    <button  id="card-call9" class="btn flex-1 !bg-[#00A63E]">
+                    <button  id="card-call9" class="btn flex-1 !bg-[#00A63E] history-btn">
                         <i class="fa-solid fa-phone text-white"></i> <span class="text-white">Call</span>
                     </button>
                 </div>
