made it responsive

--- a/index.html
+++ b/index.html
@@ -133,7 +133,8 @@
                     <i class="fa-regular fa-clock text-xl"></i>
                     <span class="font-semibold">Call History</span>
                 </div>
-                <div id="clear-history" class="flex items-center gap-2 bg-[#00A63E] px-4 py-2 rounded-full cursor-pointer">
+                <div id="clear-history"
+                    class="flex items-center gap-2 bg-[#00A63E] px-4 py-2 rounded-full cursor-pointer">
                     <span class="font-bold text-white"> Clear</span>
                 </div>
             </div>
@@ -281,7 +282,7 @@
                     <button id="copy-btn9" class="btn flex-1 mr-2 !bg-white">
                         <i class="fa-regular fa-copy"></i> Copy
                     </button>
-                    <button  id="card-call9" class="btn flex-1 !bg-[#00A63E] history-btn">
+                    <button id="card-call9" class="btn flex-1 !bg-[#00A63E] history-btn">
                         <i class="fa-solid fa-phone text-white"></i> <span class="text-white">Call</span>
                     </button>
                 </div>
@@ -294,10 +295,12 @@
                     <i class="fa-regular fa-clock text-xl"></i>
                     <span class="font-semibold">Call History</span>
                 </div>
-                <div class="flex items-center gap-2 bg-[#00A63E] px-4 py-2 rounded-full cursor-pointer">
-                    <span class="font-bold text-white">0 Clear</span>
+                <div id="clear-history-mobile"
+                    class="flex items-center gap-2 bg-[#00A63E] px-4 py-2 rounded-full cursor-pointer">
+                    <span class="font-bold text-white"> Clear</span>
                 </div>
             </div>
+            <div id="call-history-list-mobile" class="mt-4 space-y-2"></div> 
         </div>
     </div>
     <script src="home.js"></script>
