fixed some issues

--- a/index.html
+++ b/index.html
@@ -33,7 +33,8 @@
                     <img class="h-6 w-6" src="assets/coin.png" alt="">
                 </div>
                 <div class="flex items-center gap-2 bg-[#00A63E] px-4 py-2 rounded-full">
-                    <span class="font-bold text-white">0 Copy</span>
+                    <span id="navbar-copy" class="font-bold text-white">0</span>
+                    <span class="font-bold text-white"> Copy</span>
                 </div>
             </div>
         </div>
