--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
             </div>
         </div>
         <!-- Right side card -->
-        <div class="bg-white rounded-2xl shadow-sm p-6 row-span-3 flex flex-col justify-start">
+        <div class="hidden lg:flex bg-white rounded-2xl shadow-sm p-6 row-span-3 flex-col justify-start">
             <div class="flex justify-between items-center">
                 <div class="flex items-center gap-2">
                     <i class="fa-regular fa-clock text-xl"></i>
